fix: update input for function GetLiquidityPoolHistoryByCondition
