# server/docs/swagger.json
@@ -147,6 +147,18 @@
                         "description": "Provider name",
                         "name": "provider",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token A name",
+                        "name": "token_a",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token B name",
+                        "name": "token_b",
+                        "in": "query"
                     }
                 ],
                 "responses": {
